frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: This is a silly demo frontend
    language: TypeScript
    owner: Viktor Farcic (viktor@farcic.com)
    team: dot
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo-frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_BACKEND_URL
              value: http://staging.silly-demo.34.118.251.24.nip.io
          image: ghcr.io/vfarcic/silly-demo-frontend:v1.5.36
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 10
          name: main
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 10
          resources:
            limits:
              memory: '1024Mi'
            requests:
              cpu: '500m'
              memory: '512Mi'
      shareProcessNamespace: true
