frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: This is a silly demo frontend
    language: TypeScript
    owner: Viktor Farcic (viktor@farcic.com)
    team: dot
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: silly-demo-frontend
  type: ClusterIP
