frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    description: This is a silly demo frontend
    language: TypeScript
    owner: Viktor Farcic (viktor@farcic.com)
    team: dot
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  ingressClassName: contour
  rules:
  - host: staging.silly-demo-frontend.35.231.186.105.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: silly-demo-frontend
            port:
              number: 3000
